--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -6,7 +6,8 @@ on: [push]
 
 jobs:
   build:
-    matrix:
+    strategy:
+     matrix:
       os: [ubuntu-latest, macos-14, windows-latest]
       py-version: [3.10, 3.11, 3.12]
     runs-on: ${{ matrix.os }}
